# tower-of-the-sorcerer

./: CLAUDE.md
.github/: copilot-instructions.md
rust/: .gitignore  Cargo.toml
rust/assets/data/: enemy_stats.json  map.json  properties.json  sprite_atlas.json
rust/assets/sprites/: NOTICE
rust/src/: app_state.rs  input.rs  lib.rs  main.rs
rust/src/data/: enemy_stats.rs  map_info.rs  mod.rs  resource_info.rs  sprite_atlas.rs
rust/src/game/: action.rs  combat.rs  floor.rs  mod.rs  stats.rs
rust/src/render/: animation.rs  hud.rs  mod.rs  sprite_catalog.rs  tiles.rs
